Fixed spacing for mobile

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -330,14 +330,15 @@
             }
             .meta {
                 margin-top: 10px;
+                color: #818181;
                 @include breakpoint($break-tablet) {}
             }
             h1 {
-                font-size: 2.4rem;
-                line-height: 1;
+                font-size: 1.8rem;
+                line-height: 1.2;
                 margin-bottom: 10px;
                 letter-spacing: -1px;
-                font-weight: 700;
+                font-weight: 900;
                 letter-spacing: -1px;
                 @include breakpoint($break-tablet) {
                     font-size: 3.6rem;
@@ -347,7 +348,7 @@
             }
             h2 {
                 font-weight: 400;
-                font-size: 1.5rem;
+                font-size: 1.1rem;
                 line-height: 1.5;
                 letter-spacing: -0.02rem;
                 @include breakpoint($break-tablet) {
@@ -366,7 +367,7 @@
             }
         }
         .article-body {
-            margin-top: 60px;
+            margin-top: 40px;
             &::after {
                 content: "toys";
                 display: inline-block;
@@ -446,7 +447,7 @@
                 }
                 &:first-of-type:first-letter {
                     float: left;
-                    margin: 6px 10px 0 0;
+                    margin: 2px 10px 0 0;
                     font-size: 3.6rem;
                     font-weight: 900;
                     line-height: .7;
@@ -462,7 +463,7 @@
                 &:first-of-type:first-line {}
             }
             figure {
-                margin-top: 80px;
+                margin-top: 40px;
             }
         }
     }
